--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "me.aflak.bluetoothterminal"
@@ -21,9 +21,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
+    compile project(':mysql-connector-java-5.1.44-bin')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'me.aflak.libraries:bluetooth:1.2.4'
     compile 'me.aflak.libraries:pulltorefresh:1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.bumptech.glide:glide:3.6.0'
 }
