--- a/bluetooth/src/main/AndroidManifest.xml
+++ b/bluetooth/src/main/AndroidManifest.xml
@@ -38,16 +38,17 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
         <activity android:name=".chooseNoteActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".CameraActivity" />
-        <activity android:name=".UserProfile"></activity>
     </application>
 
 </manifest>
