--- a/bluetooth/build.gradle
+++ b/bluetooth/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'me.aflak.libraries:pulltorefresh:1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
 }
